<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Taskactivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        app:title="New_Task"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/task_title"
        android:textSize="20sp"
        android:textColor="@color/design_default_color_error"
        android:layout_marginTop="10dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"

        android:layout_marginTop="15dp"
        android:id="@+id/textInp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8sp"
            android:paddingEnd="8sp"
            android:textSize="15sp"
            android:hint="@string/enter_task_here"
            android:backgroundTint="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_is_to_be_done"
        android:layout_marginLeft="10dp"

        android:textSize="20sp"
        android:textColor="@color/design_default_color_error"
        android:layout_marginTop="15dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"

        android:id="@+id/textInp2">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8sp"
            android:gravity="start"
            android:lines="3"
            android:paddingEnd="8sp"
            android:textSize="15sp"
            android:hint="@string/enter_task_here"
            android:backgroundTint="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_reminder_date_and_time"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"

        android:textColor="@color/design_default_color_error"
        android:layout_marginTop="15dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"

        android:layout_marginTop="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dateedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:cursorVisible="false"
            android:drawableEnd="@android:drawable/ic_menu_week"
            android:focusable="false"
            android:gravity="start"
            android:hint="@string/set_date"
            android:paddingStart="8sp"
            android:paddingEnd="8sp"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/timetext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"

        android:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/timeedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:cursorVisible="false"
            android:drawableEnd="@android:drawable/ic_menu_week"
            android:focusable="false"
            android:gravity="start"
            android:hint="@string/set_date"
            android:paddingStart="8sp"
            android:paddingEnd="8sp"
            android:textSize="15sp" />




    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/spinner"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="10dp" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_input_add" />
    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:text="Save Button"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:cornerRadius="20dp"
        android:layout_gravity="end"
        android:backgroundTint="@color/purple_200"
        android:layout_height="wrap_content"/>

</LinearLayout>



